# NeuroNotes-FastAPI

./: .env.example  .gitignore  README.md  auth.md  build.sh  main.py  note.md  render.yaml  requirements.txt  start-dev.bat  start-dev.sh  tag.md  topic.md  user.md
alembic/versions/: ab6a61790506_integrity_constraint_for_topic_table.py
app/api/v1/: __init__.py
app/core/: __init__.py  database.py  deps.py  security.py
app/data/repository/: __init__.py  note.py  topic.py  user.py
app/domain/models/: __init__.py  note_errors.py  topic_errors.py  user_errors.py
app/dtos/: __init__.py  note_api_response.py
app/models/: __init__.py  note.py  tag.py  topic.py  user.py
app/util/: hash_pass.py
backend/: alembic.ini  main.py  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: a962359d4fc8_fix_topic_edge_cascade_problem.py  d17a09735277_ondelete_added_for_tables.py  f0cc51e128a5_fix_topic_edge_foreign_key_constraints_.py  fae0a7a30716_initial_migration.py
backend/app/api/v1/routes/: ai-assessment.py  auth.py  topic.py  user.py
backend/app/core/: __init__.py  config.py  database.py  deps.py
backend/app/core/domain/: __init__.py  result.py
backend/app/core/exceptions/: __init__.py  request_exception.py
backend/app/data/repository/: __init__.py  tag.py  topic.py  topic_edge.py
backend/app/domain/models/: __init__.py  tag_errors.py  topic_edge_errors.py  user_errors.py
backend/app/domain/use_case/auth/: register.py
backend/app/domain/use_case/note/: delete_note_by_id.py  read_all_notes.py
backend/app/domain/use_case/tag/: __init__.py  read_all_tags.py  update_tag_by_id.py
backend/app/domain/use_case/topic/: __init__.py  create_topic.py  delete_topic_by_id.py  read_all_topics.py  read_topic_by_id.py  update_topic_by_id.py
backend/app/dtos/: __init__.py  tag_api_response.py  topic_api_response.py  user_api_response.py
backend/app/models/: __init__.py  assessment.py  topic.py
backend/app/util/: __init__.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Graph.jsx  Login.jsx  NoteForm.jsx  (+6 more)
(+22 files in other folders)
