[project]
name = "neuronotes-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "async-timeout==5.0.1",
    "asyncpg>=0.30.0",
    "dnspython==2.7.0",
    "exceptiongroup==1.3.0",
    "fastapi-cli==0.0.10",
    "fastapi[standard]==0.116.1",
    "greenlet==3.2.4",
    "numpy==2.2.6",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "rich-toolkit==0.15.0",
    "sentry-sdk==2.35.2",
    "sqlmodel>=0.0.24",
    "starlette==0.47.3",
    "tomli==2.2.1",
    "typer==0.17.3",
    "uvicorn>=0.35.0",
]
