[project]
name = "neuronotes-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "async-timeout==5.0.1",
    "asyncpg>=0.30.0",
    "dnspython==2.8.0",
    "exceptiongroup==1.3.0",
    "fastapi-cli==0.0.13",
    "fastapi[standard]==0.117.1",
    "greenlet==3.2.4",
    "numpy==2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.11.9",
    "pydantic-core>=2.39.0",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "rich-toolkit==0.15.1",
    "sentry-sdk==2.38.0",
    "sqlmodel>=0.0.24",
    "starlette==0.48.0",
    "tomli==2.2.1",
    "typer==0.19.2",
    "uvicorn>=0.35.0",
]
